# qgraph-ai-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: strict-code-reviewer.md
docs/: backend_overview.md  development.md  index.md  testing.md
docs/bootstrap/: 2026-04-12-django-integration-handoff-addendum.md  2026-04-12-search-job-based-async-plan.md  README.md  ai_backend_dev_plan_by_codex_v1.md  ai_backend_dev_plan_by_codex_v2.md  ai_backend_dev_plan_feedback_v1.md  ai_backend_review_by_claude_v1.md  ai_backend_scope.md  django_backend_context.md  django_integration_handoff.md  tests_plan_by_codex_v1.md
docs/bootstrap/django_reference/docs/: api_conventions.md  architecture.md  async_jobs.md  authentication.md  backend_overview.md  index.md  logging.md  workflows.md
docs/bootstrap/django_reference/docs/apps/: accounts.md  quran.md  search.md  segmentation.md
src/: config.py  main.py
src/api/: health.py  search.py  segmentation.py
src/api/schemas/: search.py  segmentation.py
src/services/: planning.py  search_jobs.py  search_service.py  segmentation_service.py
src/stores/: graph_store.py  vector_store.py
src/workflows/: search_workflow.py  segmentation_workflow.py
tests/: conftest.py
tests/api/: test_health.py  test_search_execute.py  test_search_jobs.py  test_search_plan.py  test_segmentation_generate.py
tests/services/: test_planning.py
