[project]
name = "qgraph-ai-service"
version = "0.1.0"
description = "AI backend for QGraph (model orchestration, pipelines, and analysis)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
